<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="celsius">Цельсий</string>
    <string name="fahrenheit">Фаренгейт</string>
    <string name="kelvin">Кельвин</string>
    <string name="reaumur">Реомюр</string>
    <string name="app_name_text">Температура</string>
    <string name="val1">1</string>
    <string name="val2">33.8</string>
    <string name="val3">274.15</string>
    <string name="val4">0.8</string>
    <string name="cel">°C</string>
    <string name="fah">°F</string>
    <string name="kel">K</string>
    <string name="rea">°R</string>
    <string name="input">input</string>
</resources>