<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" tools:context=".MainActivity" android:background="#F2F3F7">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="789dp"
            android:fillViewport="true">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <ImageView android:layout_width="78dp"
                       android:layout_height="78dp" app:srcCompat="@drawable/back"
                       android:id="@+id/background"
                       android:contentDescription="@android:string/untitled" tools:ignore="ImageContrastCheck"
                       android:translationX="167dp" android:translationY="63dp"/>
            <ImageView android:layout_width="51dp"
                       android:layout_height="60.24dp" app:srcCompat="@drawable/logo" android:id="@+id/preview"
                       tools:layout_editor_absoluteY="78dp" tools:layout_editor_absoluteX="155dp"
                       android:contentDescription="@string/app_name" android:translationX="185dp"
                       android:translationY="-6dp"/>
            <TextView
                    android:text="@string/app_name_text" android:layout_width="162dp"
                    android:layout_height="35dp" android:id="@+id/AppName" android:textSize="25sp"
                    android:textColor="#000000"
                    android:translationX="128dp" android:translationY="50dp"/>
            <ImageView android:layout_width="361dp"
                       android:layout_height="68dp" app:srcCompat="@drawable/rectangle_not_click"
                       android:id="@+id/FirstObject"
                       android:contentDescription="@android:string/untitled"
                       android:translationX="25dp" android:translationY="100dp" tools:ignore="ImageContrastCheck"/>
            <ImageView
                    android:layout_width="361dp" android:layout_height="68dp"
                    app:srcCompat="@drawable/rectangle_not_click"
                    android:id="@+id/SecondObject" android:contentDescription="@android:string/untitled"
                    android:translationX="25dp" android:translationY="130dp" tools:ignore="ImageContrastCheck"/>
            <ImageView android:layout_width="361dp"
                       android:layout_height="68dp" app:srcCompat="@drawable/rectangle_not_click"
                       android:id="@+id/ThirdObject"
                       android:contentDescription="@android:string/untitled"
                       android:translationX="25dp" android:translationY="160dp" tools:ignore="ImageContrastCheck"/>
            <ImageView
                    android:layout_width="361dp" android:layout_height="68dp"
                    app:srcCompat="@drawable/rectangle_not_click"
                    android:id="@+id/FourthObject" android:contentDescription="@android:string/untitled"
                    android:translationX="25dp" android:translationY="190dp" tools:ignore="ImageContrastCheck"/>
            <ImageView android:layout_width="31dp"
                       android:layout_height="31dp" app:srcCompat="@drawable/icon_temp_not_click"
                       android:id="@+id/Temp1"
                       android:contentDescription="@android:string/untitled"
                       android:translationX="45dp" android:translationY="-155dp" tools:ignore="ImageContrastCheck"/>
            <ImageView
                    android:layout_width="31dp" android:layout_height="31dp"
                    app:srcCompat="@drawable/icon_temp_not_click"
                    android:id="@+id/Temp2" android:contentDescription="@android:string/untitled"
                    android:translationX="45dp"
                    android:translationY="-87dp" tools:ignore="ImageContrastCheck"/>
            <ImageView android:layout_width="31dp"
                       android:layout_height="31dp" app:srcCompat="@drawable/icon_temp_not_click"
                       android:id="@+id/Temp3"
                       android:contentDescription="@android:string/untitled"
                       android:translationX="45dp" android:translationY="-18dp" tools:ignore="ImageContrastCheck"/>
            <ImageView
                    android:layout_width="31dp" android:layout_height="31dp"
                    app:srcCompat="@drawable/icon_temp_not_click"
                    android:id="@+id/Temp4" android:contentDescription="@android:string/untitled"
                    android:translationX="45dp"
                    android:translationY="48dp"
                    tools:ignore="ImageContrastCheck"/>
            <TextView android:text="@string/celsius"
                      android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/textView3"
                      android:textSize="20sp"
                      android:textColor="#000000" android:translationY="-278dp" android:translationX="99dp"/>
            <TextView
                    android:text="@string/fahrenheit" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView5" android:textSize="20sp"
                    android:textColor="#000000" android:translationY="-205dp" android:translationX="99dp"/>
            <TextView android:text="@string/kelvin"
                      android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/textView7"
                      android:textSize="20sp"
                      android:textColor="#000000" android:translationY="-133dp" android:translationX="99dp"/>
            <TextView
                    android:text="@string/reaumur" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView6" android:textSize="20sp"
                    android:textColor="#000000" android:translationY="-62dp" android:translationX="99dp"/>
            <TextView
                    android:text="@string/cel"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:id="@+id/textView"
                    android:textSize="15sp" android:textColor="#000000"
                    android:translationX="51dp" android:translationY="-381dp"
            />
            <TextView
                    android:text="@string/fah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2" android:textColor="#000000" android:textSize="15sp"
                    android:translationX="52dp" android:translationY="-300dp"/>
            <EditText android:layout_width="148dp"
                      android:layout_height="68dp" android:inputType="numberDecimal"
                      android:ems="10" android:id="@+id/editTextNumber" android:translationY="-442dp"
                      android:textSize="25sp"
                      android:textStyle="bold" android:textColor="#000000" android:textAlignment="textEnd"
                      android:translationX="220dp"
                      android:text="@string/val1" android:labelFor="@+id/editTextNumber"
                      android:importantForAutofill="no"
                      tools:ignore="DuplicateSpeakableTextCheck"/>
            <EditText android:layout_width="148dp"
                      android:layout_height="68dp" android:inputType="numberDecimal"
                      android:ems="10" android:id="@+id/editTextNumber2" android:translationY="-412dp"
                      android:textSize="25sp"
                      android:textStyle="bold" android:textColor="#000000" android:textAlignment="textEnd"
                      android:translationX="220dp"
                      android:text="@string/val2" android:labelFor="@+id/editTextNumber2"
                      android:importantForAutofill="no"
                      tools:ignore="DuplicateSpeakableTextCheck"/>
            <EditText android:layout_width="148dp"
                      android:layout_height="68dp" android:inputType="numberDecimal"
                      android:ems="10" android:id="@+id/editTextNumber3" android:translationY="-382dp"
                      android:textSize="25sp"
                      android:textStyle="bold" android:textColor="#000000" android:textAlignment="textEnd"
                      android:translationX="220dp"
                      android:text="@string/val3" android:labelFor="@+id/editTextNumber3"
                      android:importantForAutofill="no"
                      tools:ignore="DuplicateSpeakableTextCheck"/>
            <EditText android:layout_width="148dp"
                      android:layout_height="68dp" android:inputType="numberDecimal"
                      android:ems="10"
                      android:id="@+id/editTextNumber4" android:translationY="-352dp" android:textSize="25sp"
                      android:textStyle="bold" android:textColor="#000000" android:textAlignment="textEnd"
                      android:translationX="220dp"
                      android:labelFor="@+id/editTextNumber4" android:text="@string/val4"
                      android:importantForAutofill="no"
                      tools:ignore="DuplicateSpeakableTextCheck"/>
            <TextView
                    android:text="@string/kel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4" android:textColor="#000000" android:textSize="15sp"
                    android:translationX="55.5dp" android:translationY="-494dp"/>
            <TextView
                    android:text="@string/rea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8" android:textColor="#000000" android:textSize="15sp"
                    android:translationX="51dp" android:translationY="-417dp"/>
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
